--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "express-analytics",
   "version": "0.1.0",
   "description": "A simple analytics middleware for express that writes to mongoDb",
-  "main": "index.js",
+  "main": "dev/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fawaz Sullia",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.4.7"
+    "@types/node": "^17.0.8",
+    "jest": "^27.4.7",
+    "typescript": "^4.5.4"
   }
 }
