--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-analytics",
   "version": "0.1.0",
   "description": "A simple analytics middleware for express that writes to mongoDb",
-  "main": "dev/index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
