--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fawazsullia/express-analytics"
+  },
   "author": "Fawaz Sullia",
-  "license": "ISC",
+  "license": "MIT",
+  "keywords": ["express-analytics", "analytics", "express-middleware"],
   "devDependencies": {
     "@types/node": "^17.0.8",
     "jest": "^27.4.7",
