--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple analytics middleware for express that writes to mongoDb",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -12,10 +12,15 @@
   },
   "author": "Fawaz Sullia",
   "license": "MIT",
-  "keywords": ["express-analytics", "analytics", "express-middleware"],
+  "keywords": [
+    "express-analytics",
+    "analytics",
+    "express-middleware"
+  ],
   "devDependencies": {
     "@types/node": "^17.0.8",
-    "jest": "^27.4.7",
+    "express": "^4.17.3",
+    "jest": "^27.5.1",
     "typescript": "^4.5.4"
   }
 }
